acceptance/dependencies/keycloak/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    route.openshift.io/termination: edge
  name: keycloak-ingress
  namespace: keycloak
spec:
  defaultBackend:
    service:
      name: keycloak-service
      port:
        number: 8080
  ingressClassName: nginx
  tls:
  - hosts:
    - idp.namespacelister.localtest.me
    secretName: keycloak-certificate-managed
  rules:
  - host: idp.namespacelister.localtest.me
    http:
      paths:
      - backend:
          service:
            name: keycloak-service
            port:
              number: 8080
        pathType: ImplementationSpecific
